<resources>
    <string name="app_name">NONAWN</string>
    <string name="slogan_name">We are what you need</string>
    <string name="powered_by">Powered by: Widi Alfrida Pramesti</string>
    <string name="lets_go">Lets Go</string>

    //for tittle on boarding screen
    <string name="shopping_tittle">Easy way for shopping</string>
    <string name="transfer_tittle">Easy BUY Easy PAY</string>
    <string name="order_success_tittle">Order Success!</string>
    <string name="delivery_tittle">The snacks is yours!</string>

    //For desc on boarding screen
    <string name="shopping_desc">Desain katalog yang simple dan eye catching memudahkan kamu untuk melihat varian produk yang tersedia</string>
    <string name="transfer_desc">Jangan khawatir, kami menyediakan pilihan untuk memudahkan proses pembayaranmu</string>
    <string name="order_success_desc">Setelah order berhasil, pihak kami akan segera menghubungimu untuk konfirmasi pesanan kamu, mohon menunggu ya!</string>
    <string name="delivery_desc">Konfirmasi selesai, pihak kami akan mengantarkan snacknya kerumahmu. Tenang aja, bayarnya dirumah kamu kok!</string>

    //For content on boarding screen
    <string name="skip_btn">SKIP</string>

    //For user Dashboard
    <string name="welcoming">NONAWN IS HERE</string>
    <string name="search">Cari Cemilanmu Yuk!</string>
    <string name="diskon">Promo</string>
    <string name="kategori">Kategori</string>
    <string name="testimoni">Testimoni</string>
    <string name="bestseller_tittle">BEST SELLER</string>
    <string name="bestseller_desc">Swipe left untuk lihat best seller minggu ini ya! </string>
    <string name="category_tittle">Produk Kami</string>
    <string name="view_all">Lihat Semua</string>
    <string name="testi_tittle">Apa Kata Mereka</string>

    //For Cardview user dashboard
    <string name="produk1_tittle">Merah Jeruk</string>
    <string name="produk1_desc">Kombinasi cabe merah dan daun jeruk membuat varian ini selalu menduduki posisi pertama karena kesegarannya!</string>
    <string name="produk2_tittle">Gurih</string>
    <string name="produk2_desc">Rasa kerupuk kulit yang disertai rasa gurih yang tidak mencolok membuat lidah tidak berhenti makan!</string>
    <string name="produk3_tittle">Merah</string>
    <string name="produk3_desc">Ada yang merah, tapi bukan delima! Yap, cabe merah yang disertai rasa gurih. Rasa gurih pedasnya bikin ketagihan! </string>
    <string name="desc_testi">Varian ini enak sekali. Perpaduan cabe merah dan daun jeruk seger banget bikin ketagihan!!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //For Navigation drawer
    <string name="nav_home">Home</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_tentang">Tentang</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_historyorder">Riwayat Pesanan</string>

</resources>