<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bottom_nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/home"/>
        <item
            android:id="@+id/bottom_nav_tentang"
            android:title="@string/nav_tentang"
            android:icon="@drawable/icon_tentang"/>
        <item
            android:id="@+id/bottom_nav_profile"
            android:title="@string/nav_profile"
            android:icon="@drawable/icon_profile"/>
<!--        <item-->
<!--            android:id="@+id/bottom_nav_historyorder"-->
<!--            android:title="@string/nav_historyorder"-->
<!--            android:icon="@drawable/icon_history"/>-->
        <item
            android:id="@+id/bottom_nav_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/icon_logout"/>
    </group>

</menu>