<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.UserDashboard"
    android:orientation="vertical"
    android:background="@color/whitegrey"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_menu_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_samping_header"
        app:menu="@menu/menu_samping"
        android:theme="@style/navigationtheme"
        app:itemTextColor="@color/dark_grey"
        app:itemIconTint="@color/dark_grey"
        android:backgroundTint="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/pattern1"
            android:layout_marginBottom="-700dp"/>
    </com.google.android.material.navigation.NavigationView>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whitegrey"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu_dashboard"
            android:layout_centerVertical="true"/>

<!--        <ImageView-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:src="@drawable/cart_dashboard"-->
<!--            android:layout_alignParentRight="true"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:padding="5dp"-->
<!--            android:background="@color/warmheavy" />-->
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/welcoming_usrdash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcoming"
                        android:fontFamily="sans-serif-smallcaps"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/dark_grey"/>

<!--                    <RelativeLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="40dp"-->
<!--                        android:layout_below="@+id/welcoming_usrdash"-->
<!--                        android:background="@color/white"-->
<!--                        android:layout_marginTop="20dp"-->
<!--                        android:layout_marginBottom="20dp"-->
<!--                        android:layout_marginLeft="40dp"-->
<!--                        android:layout_marginRight="40dp"-->
<!--                        android:elevation="8dp">-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/search"-->
<!--                            android:layout_centerVertical="true"-->
<!--                            android:layout_marginLeft="15dp"-->
<!--                            android:fontFamily="sans-serif-light"/>-->

<!--                        <ImageView-->
<!--                            android:layout_width="30dp"-->
<!--                            android:layout_height="30dp"-->
<!--                            android:src="@drawable/search_icon"-->
<!--                            android:layout_centerVertical="true"-->
<!--                            android:layout_alignParentRight="true"-->
<!--                            android:layout_marginRight="15dp">-->
<!--                        </ImageView>-->

<!--                    </RelativeLayout>-->
                </RelativeLayout>

<!--                <LinearLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:orientation="horizontal"-->
<!--                    android:layout_marginTop="5dp">-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:orientation="vertical">-->

<!--                        <RelativeLayout-->
<!--                            android:layout_width="60dp"-->
<!--                            android:layout_height="60dp"-->
<!--                            android:elevation="8dp"-->
<!--                            android:layout_margin="10dp">-->

<!--                            <ImageView-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:padding="5dp"-->
<!--                                android:src="@drawable/promo"-->
<!--                                android:background="@drawable/card_1"-->
<!--                                android:layout_centerInParent="true"-->
<!--                                android:clickable="true"/>-->

<!--                        </RelativeLayout>-->

<!--                        <TextView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/diskon"-->
<!--                            android:textAlignment="center"-->
<!--                            android:layout_gravity="center_horizontal"-->
<!--                            android:fontFamily="sans-serif"-->
<!--                            android:textColor="@color/dark_grey"-->
<!--                            android:textSize="14sp"/>-->

<!--                    </LinearLayout>-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:orientation="vertical">-->

<!--                        <RelativeLayout-->
<!--                            android:layout_width="60dp"-->
<!--                            android:layout_height="60dp"-->
<!--                            android:elevation="8dp"-->
<!--                            android:layout_margin="10dp">-->

<!--                            <ImageView-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:src="@drawable/kategori2"-->
<!--                                android:background="@drawable/card_2"-->
<!--                                android:layout_centerInParent="true"-->
<!--                                android:padding="3dp"-->
<!--                                android:clickable="true"/>-->

<!--                        </RelativeLayout>-->

<!--                        <TextView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/kategori"-->
<!--                            android:textAlignment="center"-->
<!--                            android:layout_gravity="center_horizontal"-->
<!--                            android:fontFamily="sans-serif"-->
<!--                            android:textColor="@color/dark_grey"-->
<!--                            android:textSize="14sp"/>-->

<!--                    </LinearLayout>-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:orientation="vertical">-->

<!--                        <RelativeLayout-->
<!--                            android:layout_width="60dp"-->
<!--                            android:layout_height="60dp"-->
<!--                            android:elevation="8dp"-->
<!--                            android:layout_margin="10dp">-->

<!--                            <ImageView-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:layout_centerHorizontal="true"-->
<!--                                android:background="@drawable/card_3"-->
<!--                                android:clickable="true"-->
<!--                                android:padding="8dp"-->
<!--                                android:layout_marginTop="3dp"-->
<!--                                android:src="@drawable/testi2" />-->

<!--                        </RelativeLayout>-->

<!--                        <TextView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/testimoni"-->
<!--                            android:textAlignment="center"-->
<!--                            android:layout_gravity="center_horizontal"-->
<!--                            android:fontFamily="sans-serif"-->
<!--                            android:textColor="@color/dark_grey"-->
<!--                            android:textSize="14sp"/>-->

<!--                    </LinearLayout>-->


<!--                </LinearLayout>-->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="330dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@color/lowwhiteyell">

                    <LinearLayout
                        android:id="@+id/featured_background"
                        android:layout_width="120dp"
                        android:layout_height="300dp"
                        android:background="@color/whiteyell"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bestseller_tittle"
                            android:textSize="25sp"
                            android:textColor="@color/dark_grey"
                            android:layout_marginTop="50dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/bestseller_desc"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/dark_grey"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="330dp"
                        android:layout_toRightOf="@+id/featured_background"
                        android:background="@color/whitegrey"/>


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/diskon"
                            android:textSize="20sp"
                            android:textColor="@color/dark_grey"
                            android:fontFamily="sans-serif-black"/>

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/view_all"-->
<!--                            android:layout_alignParentRight="true"-->
<!--                            android:textColor="@color/dark_grey"-->
<!--                            android:textSize="15sp"-->
<!--                            android:layout_centerVertical="true"/>-->

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/promo_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category_tittle"
                            android:textSize="20sp"
                            android:textColor="@color/dark_grey"
                            android:fontFamily="sans-serif-black"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_all"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/dark_grey"
                            android:textSize="15sp"
                            android:layout_centerVertical="true"
                            android:clickable="true"
                            android:onClick="seemore_varian"/>

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/kategori_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="320dp"/>

                </LinearLayout>

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical"-->
<!--                    android:layout_marginTop="30dp"-->
<!--                    android:padding="20dp">-->

<!--                    <RelativeLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content">-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/testi_tittle"-->
<!--                            android:textSize="20sp"-->
<!--                            android:textColor="@color/dark_grey"-->
<!--                            android:fontFamily="sans-serif-black"/>-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/view_all"-->
<!--                            android:layout_alignParentRight="true"-->
<!--                            android:textColor="@color/dark_grey"-->
<!--                            android:textSize="15sp"-->
<!--                            android:layout_centerVertical="true"/>-->

<!--                    </RelativeLayout>-->

<!--                    <androidx.recyclerview.widget.RecyclerView-->
<!--                        android:id="@+id/testi_recycler"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"/>-->

<!--                </LinearLayout>-->

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>